# ngos

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  final_demo.sh  gaming_demo.sh  host-runtime-report.txt  session_agents_raw.txt  ui-preview-master
.claude/: settings.local.json
.config/: nextest.toml
audio-translate/: Cargo.toml
boot-x86_64/: Cargo.toml  build.rs
boot-x86_64/src/: boot_audio_runtime.rs  boot_facts.rs  boot_gpu_runtime.rs  boot_handoff_proof.rs  boot_input_runtime.rs  boot_locator.rs  boot_network_runtime.rs  cpu_apic.rs  cpu_extended_state_buffer.rs  cpu_features.rs  cpu_handoff.rs  cpu_hardware_provider.rs  cpu_runtime_status.rs  cpu_tlb.rs  diagnostics.rs  entry.S  fault_diag.rs  framebuffer.rs  gdt.rs  heap.rs  irq_registry.rs  keyboard.rs  lib.rs  limine.rs  main.rs  paging.rs  phys_alloc.rs  pic.rs  pit.rs  reboot_trace.rs  runtime_kernel_stack.rs  serial.rs  smp.rs  smp_trampoline.S  timer.rs  traps.S  traps.rs  tty.rs  ui_framebuffer.rs  ui_presenter.rs  (+14 more)
boot-x86_64/src/diagnostics/: chronoscope_graph.rs  chronoscope_query.rs  chronoscope_render.rs  chronoscope_replay.rs  chronoscope_types.rs  crash_history.rs  crash_types.rs  developer_guidance.rs  export_bundle.rs  failure_analysis.rs  runtime_summaries.rs
boot-x86_64/tests/: fault_diagnostics.rs  keyboard_input.rs
browser-cli/: Cargo.toml
browser-cli/src/: main.rs
browser-core/: Cargo.toml
browser-css/: Cargo.toml
browser-css/src/: lib.rs
browser-dom/: Cargo.toml
browser-dom/src/: lib.rs
browser-html/: Cargo.toml
browser-html/src/: lib.rs
browser-http/: Cargo.toml
browser-js/: Cargo.toml
browser-js/src/: lib.rs
browser-layout/: Cargo.toml
browser-layout/src/: lib.rs
browser-paint/: Cargo.toml
browser-paint/src/: lib.rs
browser-tls/: Cargo.toml
browser-tls/src/: lib.rs
browser-ui/: Cargo.toml
browser-ui/src/: lib.rs
browser-webapi/: Cargo.toml
browser-webapi/src/: lib.rs
game-compat-runtime/: Cargo.toml
game-compat-runtime/src/: abi_proof.rs  device_proof.rs  lib.rs  loader_proof.rs
host-runtime/: Cargo.toml
host-runtime/src/: backend.rs  main.rs  report.rs  session.rs
kernel-core/: Cargo.toml
kernel-core/benches/: decision_tracing.rs
kernel-core/src/: bus_model.rs  core_objects.rs  descriptor_io_dispatch.rs  descriptor_io_runtime.rs  descriptor_model.rs  descriptor_runtime.rs  device_model.rs  device_runtime.rs  event_queue_runtime.rs  eventing_model.rs  foundation.rs  lib.rs  memory_wait_runtime.rs  native_model.rs  observability.rs  process_model.rs  process_table.rs  process_vm_dispatch.rs  queue_introspection.rs  runtime_core.rs  scheduler.rs  signal_runtime.rs  sleep_queue_runtime.rs  syscall_eventing.rs  syscall_surface.rs  user_launch.rs  user_memory_runtime.rs  user_syscall_runtime.rs  verified_core.rs  vfs_model.rs  vm_model.rs
kernel-core/src/descriptor_io_runtime/: access.rs  ops.rs  readiness.rs
kernel-core/src/event_queue_runtime/: control.rs  emit.rs
kernel-core/src/memory_wait_runtime/: housekeeping.rs  ops.rs
kernel-core/src/runtime_core/: eventing.rs  native_model.rs  process_vm.rs
kernel-core/src/signal_runtime/: delivery.rs  wait_state.rs
kernel-core/src/sleep_queue_runtime/: lifecycle.rs  wait_ops.rs
kernel-core/src/syscall_surface/: signal_memory.rs
kernel-core/src/tests/: capability_model.rs  eventing_waits.rs  foundation.rs  hal_runtime.rs  mod.rs  native_model.rs  runtime_process.rs  runtime_vm.rs  syscall_surface.rs  vfs_io.rs
kernel-core/src/user_syscall_runtime/: dispatch_basic.rs  dispatch_native.rs  helpers.rs
kernel-core/src/user_syscall_runtime/tests/: basic.rs  mod.rs  native_model.rs
ngos-shell-code/: Cargo.toml
ngos-shell-code/src/: lib.rs
ngos-shell-dev/: Cargo.toml
ngos-shell-dev/src/: lib.rs
ngos-shell-game/: Cargo.toml
ngos-shell-game/src/: audio_command_support.rs  audio_plan_command_support.rs  audio_queue_command_support.rs  audio_status_command_support.rs  audio_status_render_support.rs  audio_submit_command_support.rs  audio_translation_args_support.rs  audio_translation_command_support.rs  audio_translation_execute_support.rs  command_audio_dispatch.rs  command_dispatch_support.rs  command_graphics_dispatch.rs  command_graphics_observe_dispatch.rs  command_graphics_submit_dispatch.rs  command_input_dispatch.rs  command_media_dispatch.rs  command_session_dispatch.rs  command_session_lifecycle_dispatch.rs  command_session_manifest_dispatch.rs  command_session_simulation_dispatch.rs  command_session_status_dispatch.rs  command_watch_dispatch.rs  compat_abi_observation_support.rs  compat_abi_observe_launch_support.rs  compat_abi_observe_verify_support.rs  compat_abi_payload_support.rs  compat_abi_process_resolve_support.rs  compat_abi_procfs_snapshot_support.rs  compat_abi_procfs_support.rs  compat_abi_session_observe_support.rs  compat_abi_support.rs  compat_loader_artifact_support.rs  compat_loader_launch_support.rs  compat_loader_observe_support.rs  compat_loader_support.rs  compat_smoke_support.rs  compat_support.rs  event_queue_bus_describe_support.rs  event_queue_describe_support.rs  event_queue_graphics_describe_support.rs  (+152 more)
ngos-shell-gpu/: Cargo.toml
ngos-shell-gpu/src/: lib.rs
ngos-shell-lang/: Cargo.toml
ngos-shell-lang/src/: lib.rs
ngos-shell-network/: Cargo.toml
ngos-shell-network/src/: lib.rs
ngos-shell-nextmind/: Cargo.toml
ngos-shell-nextmind/src/: lib.rs
ngos-shell-proc-view/: Cargo.toml
ngos-shell-proc-view/src/: lib.rs
ngos-shell-repair/: Cargo.toml
ngos-shell-repair/src/: lib.rs
ngos-shell-resource/: Cargo.toml
ngos-shell-resource/src/: lib.rs
ngos-shell-rust/: Cargo.toml
ngos-shell-rust/src/: lib.rs
ngos-shell-semantic/: Cargo.toml
ngos-shell-semantic/src/: lib.rs
ngos-shell-session/: Cargo.toml
ngos-shell-session/src/: label.rs  lib.rs  pipeline.rs  record.rs  render.rs  session_cmd.rs  sources.rs
ngos-shell-state/: Cargo.toml
ngos-shell-state/src/: lib.rs
ngos-shell-vfs/: Cargo.toml
ngos-shell-vfs/src/: fd_cmd.rs  io.rs  lib.rs  ops.rs  path_cmd.rs  tests.rs  vfs_cmd.rs
(+666 files in other folders)
