[package]
name = "browser-ui"
version.workspace = true
edition.workspace = true
license = "Proprietary"
description = "NGOS Browser - UI shell using FrameScript"

[dependencies]
browser-core = { path = "../browser-core" }
browser-dom = { path = "../browser-dom" }
browser-layout = { path = "../browser-layout" }
browser-paint = { path = "../browser-paint", features = ["skia"] }
ngos-gfx-translate = { path = "../gfx-translate" }
