[package]
name = "ngos-shell-dev"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ngos_shell_dev"

[dependencies]
ngos-shell-types = { path = "../ngos-shell-types" }
ngos-shell-vfs = { path = "../ngos-shell-vfs" }
ngos-user-abi = { path = "../user-abi" }
ngos-user-runtime = { path = "../user-runtime" }
