[package]
name = "ngos-shell-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ngos-shell-proc = { path = "../ngos-shell-proc" }
ngos-shell-types = { path = "../ngos-shell-types" }
ngos-shell-vfs = { path = "../ngos-shell-vfs" }
ngos-user-abi = { path = "../user-abi" }
ngos-user-runtime = { path = "../user-runtime" }

[lib]
name = "ngos_shell_gpu"
