[package]
name = "ngos-shell-network"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ngos-shell-support = { path = "../ngos-shell-support" }
ngos-shell-types = { path = "../ngos-shell-types" }
ngos-shell-vfs = { path = "../ngos-shell-vfs" }
ngos-user-abi = { path = "../user-abi" }
ngos-user-runtime = { path = "../user-runtime" }

[lib]
name = "ngos_shell_network"
