[package]
name = "ngos-shell-resource"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ngos-shell-types = { path = "../ngos-shell-types" }
ngos-user-abi = { path = "../user-abi" }
ngos-user-runtime = { path = "../user-runtime" }

[lib]
name = "ngos_shell_resource"
