[package]
name = "ngos-shell-semantic"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ngos_shell_semantic"

[dependencies]
ngos-shell-proc = { path = "../ngos-shell-proc" }
ngos-shell-types = { path = "../ngos-shell-types" }
ngos-user-abi = { path = "../user-abi" }
ngos-user-runtime = { path = "../user-runtime" }
