[package]
name = "ngos-shell-vfs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VFS operations and command dispatchers for the ngos native shell"

[dependencies]
ngos-shell-types = { path = "../ngos-shell-types" }
ngos-user-abi = { path = "../user-abi" }
ngos-user-runtime = { path = "../user-runtime" }
